# bitterblossom

./: .bb-runtime-env  .dispatch-prompt.md  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  .landmark.yml  .spellbook.yaml  AGENTS.md  BLOCKED.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  MEMORY.md  Makefile  OPENCODE.md  PLAN.md  PROMPT.md  QA.md  README.md  SCRATCH_PROOF_942.md  VISION.md  WORKFLOW.md  canary-services.toml  dagger.json  env.bb.example  fleet.toml  fly.toml  glance.md  go.mod  go.sum  opencode.json  project.md  pytest.ini  vision.md
.bb-agent/: events.jsonl  state.json
.canary/: integration.json
.githooks/: pre-commit
.groom/: BACKLOG.md  dashboard-2026-03-06.html  factory-audit-2026-03-06-run-484.md  factory-audit-2026-03-14.md  plan-2026-03-06.md  plan-2026-03-14.md  plan-2026-03-16.md  retro.md  review-scores.ndjson  walkthrough-issue-98.md
backlog.d/: 002-multi-repo-support.md  003-muse-agent.md  004-loop-persistence.md  005-delete-go-cli.md  006-repo-verification-clone-clean.md  008-add-repo-boundary-guardrails.md  009-harden-governance-gates.md  011-canary-triage-sprite.md  012-kill-orchestration-layer.md  013-adopt-sprites-ex-sdk.md  014-notification-first-observability.md  015-vision-pivot-docs.md  016-sprite-heartbeat-protocol.md  017-check-env-false-green.md  019-spellbook-broken-symlink.md  020-auth-self-healing.md  021-agent-session-longevity.md  022-model-routing-cost-tracking.md  023-harness-agnostic-dispatch.md  024-self-reload-after-merge.md  025-per-sprite-auth-isolation.md  (+81 more)
(+1374 files in other folders)
