[package]
name = "bitterblossom"
version = "0.1.0"
edition = "2021"
description = "Event plane for agent workloads: task + agent + trigger as files, durable runs on sprites"
license = "MIT"

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4.45"
clap = { version = "4", features = ["derive"] }
cron = "0.12"
hmac = "0.12"
libc = "0.2.186"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
tiny_http = "0.12"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
